@@ -5,6 +5,8 @@ Version 1.5.7+svn:
    * ensure SDL Net initialized before attempting to send upload_log
  * WML engine:
    * add an "animate" key to the [teleport] event
+   * add a resistance_anim block used whenever a unit uses a [resistance]
+     ability on a neghbour
 
 Version 1.5.7:
  * Campaigns:
